<?xml version="1.0"?>
<package format="2">
  <name>ORB_SLAM2</name>
  <version>0.0.1</version>
  <description>ORB-SLAM2 ROS wrapper</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
</package>

<!-- <package>
  <description brief="ORB_SLAM2">

     ORB_SLAM2

  </description>
  <author>Raul Mur-Artal</author>
  <license>GPLv3</license>
  <depend package="roscpp"/>
  <depend package="tf"/>
  <depend package="sensor_msgs"/>
  <depend package="image_transport"/>
  <depend package="cv_bridge"/>


</package> -->



